@@ -69,7 +69,12 @@ netif_add(struct netif *netif, struct ip_addr *ipaddr, struct ip_addr *netmask,
   err_t (* input)(struct pbuf *p, struct netif *netif))
 {
   static s16_t netifnum = 0;
-  
+
+  /* reset new interface configuration state */
+  netif->ip_addr.addr = 0;
+  netif->netmask.addr = 0;
+  netif->gw.addr = 0;
+  netif->flags = 0;
 #if LWIP_DHCP
   /* netif not under DHCP control by default */
   netif->dhcp = NULL;
